--- a/.config/awesome/themes/mine/README
+++ b/.config/awesome/themes/mine/README
@@ -1,3 +1,5 @@
-Background images:
-    Mikael Eriksson <mikael_eriksson@miffe.org>
-    Licensed under CC-BY-SA-3.0
+Background image:
+           By Miguel-Santos
+           https://miguel-santos.deviantart.com/art/Coal-Mine-607906165
+
+Icons are by me (matj1).
